maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: not found: value sommeAngle
var sommeAngle() = 0
    ^Escaper:7: error: not found: value estBiscuit
while (!estBiscuit) {
        ^Escaper:14: error: not found: value sommeAngle
	} while (sommeAngle() != 0)
                 ^Escaper:32: error: not found: value sommeAngle
			sommeAngle() += 1
                        ^Escaper:35: error: not found: value sommeAngle
			sommeAngle() -= 1
                        ^Escaper:39: error: not found: value sommeAngle
			sommeAngle() -= 2
                        ^